hphp/test/slow/compilation/1321.php.expectf
HipHop Fatal error: Argument 1 passed to X::bar() must be an instance of X, null given in %s/hphp/test/slow/compilation/1321.php on line 3
